--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="menu">
+    <ion-header>
+      <ion-toolbar>
+        <div class="logo-container">
+          <img src="assets/icon/favicon.png" alt="logo" class="logo">
+        </div>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item routerLink="/home" routerDirection="root">
+          <ion-icon slot="start" name="home"></ion-icon>
+          <ion-label>Home</ion-label>
+        </ion-item>
+        <ion-item routerLink="/settings" routerDirection="root">
+          <ion-icon slot="start" name="settings"></ion-icon>
+          <ion-label>Settings</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+    <ion-footer>
+
+    </ion-footer>
+  </ion-menu>
+  <ion-router-outlet id="menu"></ion-router-outlet>
 </ion-app>
