--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,19 @@
         </ion-item>
       </ion-list>
     </ion-content>
-    <ion-footer>
+    <ion-footer class="ion-no-padding">
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button fill="clear" href="https://ionicframework.com/" routerDirection="root">
+            <ion-icon name="information-circle"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+          <ion-button fill="clear" href="https://ionicframework.com/" routerDirection="root">
+            <ion-icon name="log-out"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
 
     </ion-footer>
   </ion-menu>
