--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,7 @@
+@import '../theme/variables.scss';
+
 .logo-container {
+    background-color: $PrimaryColor;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,4 +14,8 @@
     height: 100px;
     object-fit: cover;
     aspect-ratio: 1/1;
+    border-radius: 50%;
+    padding: 3px;
+    margin: 5px;
+    background-color: $LightColor;
 }
