--- a/src/components/navbar/navbar.component.scss
+++ b/src/components/navbar/navbar.component.scss
@@ -1,3 +1,5 @@
+@import '../../theme/variables.scss';
+
 header {
     width: 100%;
     height: fit-content;
@@ -5,7 +7,7 @@ header {
     justify-content: start;
     align-items: center;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.096);
+    background-color: $DarkContainer;
     gap: 10px;
 }
 
