--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -16,13 +16,12 @@
                         <ion-label position="stacked">Contexto</ion-label>
                         <ion-textarea placeholder="Describe el contexto de la tarea"></ion-textarea>
                     </ion-item>
-                    <ion-accordion>
-                        <ion-item>
-                            <ion-label position="stacked">Fecha de Vencimiento</ion-label>
-                            <ion-datetime presentation="date" placeholder="Selecciona una fecha"></ion-datetime>
-                        </ion-item>
-                    </ion-accordion>
-                    
+                    <!-- <ion-item>>
+                        <ion-accordion>
+                                <ion-label position="stacked">Fecha de Vencimiento</ion-label>
+                                <ion-datetime presentation="date" placeholder="Selecciona una fecha"></ion-datetime>
+                        </ion-accordion>
+                    </ion-item> -->
                     <ion-item>
                         <ion-label position="stacked">Prioridad</ion-label>
                         <ion-select placeholder="Selecciona la prioridad">
